# Kairo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup_cuda.py
benchmarks/: bench_embedding.py  bench_memory.py  bench_sparse_grad.py  bench_spmm.py  bench_topology.py  conftest.py
csrc/: acc_spmm_kernel.cu  bindings.cpp  sparse_embedding_kernel.cu
csrc/include/: common.cuh  tile_config.cuh
examples/: synthetic_sparse_embedding.py
kairo/: __init__.py  config.py  types.py
kairo/ops/: __init__.py  _autotuner.py  sparse_embedding.py  spmm.py
kairo/storage/: __init__.py  embedding.py
kairo/storage/nmf/: __init__.py  factorizer.py  mask_init.py
kairo/training/: __init__.py  trainer.py
kairo/training/agent_optim/: __init__.py  optimizer.py
kairo/training/sparse_rec/: __init__.py  sampler.py  sparse_grad.py  topology.py
tests/: conftest.py  test_config.py  test_types_new.py
tests/ops/: test_sparse_embedding_ops.py  test_spmm_ops.py
tests/storage/: test_embedding.py  test_nmf_factorizer.py  test_nmf_mask_init.py
tests/training/: test_trainer.py
tests/training/agent_optim/: test_optimizer.py
tests/training/sparse_rec/: test_sampler.py  test_sparse_grad.py  test_topology.py
