[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kairo"
dynamic = ["version"]
description = "An end-to-end sparse computation framework for trillion-parameter recommendation systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "HaydenCC"},
]
urls = {Homepage = "https://github.com/Kairo-oss/Kairo", Issues = "https://github.com/Kairo-oss/Kairo/issues"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pre-commit",
]
test = [
    "pytest>=7.0",
    "pytest-cov",
    "hypothesis>=6.0",
]

[tool.setuptools.dynamic]
version = {attr = "kairo._version.__version__"}

[tool.setuptools.packages.find]
include = ["kairo*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "cuda: requires CUDA GPU",
    "slow: long-running tests",
]
